--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@
   --color-primary: theme('colors.orange.600'); /* Only works if using PostCSS with Tailwind, see below */
   --color-light-gray: theme('colors.gray.400'); /* Only works if using PostCSS with Tailwind, see below */
 }
+
+/* Hide scrollbar for webkit browsers */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
